fixing text in emails and deleting street_number from emails

--- a/app/views/user_mailer/become_maker_email_admin.html.erb
+++ b/app/views/user_mailer/become_maker_email_admin.html.erb
@@ -20,10 +20,10 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row"><%= @infos_user[:maker_id] %></th>
+            <th scope="row"><%= @infos_user[:user_id] %></th>
             <td><%= @infos_user[:first_name] %></td>
             <td><%= @infos_user[:last_name] %></td>
-            <td><%= @infos_user[:address_line_2] + ", " + @infos_user[:street_number] + ", " + @infos_user[:address_line_1] + " " + @infos_user[:zip_code] + ", " + @infos_user[:city] %></td>
+            <td><%= @infos_user[:address_line_2] + ", " + @infos_user[:address_line_1] + " " + @infos_user[:zip_code] + ", " + @infos_user[:city] %></td>
           </tr>
           <td><%= @infos_user[:website] %></td>
           <tr>
