--- a/app/views/user_mailer/become_maker_email_confirmation.html.erb
+++ b/app/views/user_mailer/become_maker_email_confirmation.html.erb
@@ -4,12 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Salut <%= @infos_user[:first_name] %> et merci pour ta demande !</h1>
+    <h1>Salut <%= @infos_user[:first_name] %>,</h1>
     <p>
       Tu as fait une demande pour ouvrir un compte artisan sur notre compte avec cet email : <%= @infos_user[:email] %>.
     </p>
     <p>
-      Nous tacherons de donner une réponse à ta demande dans les plus brefs délais !</a>.
+      L'équipe en a été informé et nous tacherons de donner une réponse dans les plus brefs délais !
     </p>
     <p> À très vite sur <a href="http://localhost:3000/">nouveauxdesigns.fr</a> !
   </body>
