--- a/app/views/user_mailer/become_maker_email_confirmation.text.erb
+++ b/app/views/user_mailer/become_maker_email_confirmation.text.erb
@@ -1,8 +1,8 @@
-Salut <%= @infos_user[:first_name] %>, merci pour ta demande !
+Salut <%= @infos_user[:first_name] %>,
 ==========================================================
 
-Tu as fait une demande pour ouvrir un compte artisan sur notre compte avec cet email : <%= @infos_user[:email] %>.
+Tu as fait une demande pour ouvrir un compte artisan sur notre site avec cet email : <%= @infos_user[:email] %>.
 
-Nous tacherons de donner une réponse à ta demande dans les plus brefs délais !
+L'équipe en a été informé et nous tacherons de donner une réponse dans les plus brefs délais !
 
 À très vite sur nouveauxdesigns.fr !
