--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,11 +19,11 @@
   <div class="dropdown">
     <div class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <%= link_to "", cart_path(current_user.customer.cart), :class=>"fas fa-shopping-cart fa-2x nav-link loggedin", :style => "color:#1e185f; font-size:28px;" %> 
+        <%= link_to "", cart_path(current_user.customer.cart), :class=>"fas fa-shopping-cart fa-2x nav-link", :style => "color:#1e185f; font-size:28px;", :id => "cart-navbar-icon" %> 
         <button class="btn btn-outline dropdown-toggle nav-link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%= link_to "", edit_user_registration_path, :class=>"fas fa-user fa-2x loggedin" %>
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" id="dropdown-navbar-menu">
           <%= link_to "Mon profil", edit_user_registration_path, :class=>"nav-link dropdown-item" %>
           <% if user_signed_in? && current_maker %>
             <% if current_maker.shop %>
@@ -36,7 +36,7 @@
       <button class="btn btn-outline dropdown-toggle nav-link" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <%= link_to "", edit_user_registration_path, :class=>"fas fa-user fa-2x" %>
       </button>
-        <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
           <%= link_to "Se connecter", new_user_session_path, :class=>"nav-link dropdown-item" %>
           <%= link_to "S'inscrire", new_user_registration_path, :class=>"nav-link dropdown-item" %>
         </div>
