--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,8 +1,11 @@
 <div class="jumbotron1">
   <img src="https://images.unsplash.com/photo-1500829243541-74b677fecc30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" class="background-image" alt="...">
   <div class="background-image-overlay">
-  <h3>Contribuez à la consomation responsable durable locale</h3> 
-    <a class="btn btn-success btn-lg" href="#" role="button">Voir plus</a> 
-</div>
+    <h3>Contribuez à la consomation responsable durable locale</h3>
+      <a class="btn btn-success btn-lg" href="#" role="button">Voir plus</a>
+  </div>
 </div>
 
+<div id="mapid">
+  <script src="static_pages/maps.js"></script>
+</div>
