--- a/app/views/makers/validate_maker.html.erb
+++ b/app/views/makers/validate_maker.html.erb
@@ -1,6 +1,8 @@
 <div class="col-6 container ">
   <h2 class= "p-4 text-center">Valider le compte artisan de <%= @maker.address.first_name + " " + @maker.address.last_name %></h2>
 
-  <%= button_to "Valider", makers_path, :method => :post, :class => "btn btn-primary btn-lg btn-block", params: {maker_id: @maker.id, operation: "validate"} %>
+  <%= button_to "Accepter", makers_path, :method => :post, :class => "btn btn-success btn-lg btn-block", params: {maker_id: @maker.id, operation: "validate"} %>
+  <%= button_to "Refuser", makers_path, :method => :post, :class => "btn btn-danger btn-lg btn-block", params: {maker_id: @maker.id, operation: "deny"} %>
+
 
 </div>
