Tried to add ajax, still not working

--- a/app/views/items/_plus_minus_cart_quantity.html.erb
+++ b/app/views/items/_plus_minus_cart_quantity.html.erb
@@ -6,7 +6,7 @@
       </span>
     <% end %>
   <% end %>
-  <div class="ml-3 mr-3">
+  <div id="quantity" class="ml-3 mr-3">
     <%= cart_item.cart_quantity %>
   </div>
   <% if cart_item.cart_quantity < cart_item.item.available_quantity %>
