Shop controller methods and views new and create added.

--- a/app/views/makers/new.html.erb
+++ b/app/views/makers/new.html.erb
@@ -64,7 +64,7 @@
   <%= f.hidden_field :operation, :value => 'create' %>
 
   <div class="actions mt-5">
-    <%= f.submit "Valider", class: "btn btn-lg btn-info btn-block" %>
+    <%= f.submit "Valider", class: "btn btn-lg btn-succes btn-block" %>
   </div>
   <%end%>
 </div>
