--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,9 +25,11 @@
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" id="dropdown-navbar-menu">
           <%= link_to "Mon profil", edit_user_registration_path, :class=>"nav-link dropdown-item" %>
-          <% if user_signed_in? && current_maker %>
+          <% if user_signed_in? && current_maker && current_maker.is_validated %>
             <% if current_maker.shop %>
               <%= link_to "Mon shop", edit_shop_path(current_maker.shop.id), :class=>"nav-link dropdown-item"%>
+            <% else %>
+              <%= link_to "Créer mon shop", new_shop_path, :class=>"nav-link dropdown-item" %>
             <% end %>
           <% end %>
             <%= link_to "Déconnexion", destroy_user_session_path, method: :delete, :class=>"nav-link dropdown-item" %>
