link to new Maker account

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
 				<h4 class="underline footer-font-size pt-2"> A propos </h4>
 				<ul class="list-unstyled">
           <li>
-            <a class="text-white" href="#!">Devenir créateur</a>
+            <%= link_to "Devenir artisan ?", new_maker_path, :class=> "text-white" %>
           </li>
           <li>
             <a class="text-white" href="#!">CGV</a>
