--- a/app/views/items/_plus_minus_quantity_available.html.erb
+++ b/app/views/items/_plus_minus_quantity_available.html.erb
@@ -1,13 +1,13 @@
 <div class="d-flex flex-row justify-content-center mt-3 mb-3">
-<%= button_to item_path(item.id), :method => :patch, :class => "button is-link", params: {operation: "remove"} do %>
+<%= button_to item_path(item.id), :method => :patch, :class => "button is-link", :remote => true, params: {operation: "remove"} do %>
   <span class="icon">
     <i class="fas fa-minus-square "></i>
   </span>
 <% end %>
-  <div class="ml-3 mr-3">
+  <div class="ml-3 mr-3" id="quantity-<%=item.id%>">
     <%=item.available_quantity%>
   </div>
-  <%= button_to item_path(item.id), :method => :patch, :class => "button is-link", params: {operation: "add"} do %>
+  <%= button_to item_path(item.id), :method => :patch, :class => "button is-link", :remote => true, params: {operation: "add"} do %>
   <span class="icon">
     <i class="fas fa-plus-square"></i>
   </span>
