--- a/app/views/categories/_jumbotron_category.html.erb
+++ b/app/views/categories/_jumbotron_category.html.erb
@@ -1,10 +1,4 @@
-
-<div class="jumbotron-fluid jumbotron-category">
-  <h1 class="hd1"><%= category.name %></h1>
-  <p class="lead hd1">Ici on va insérer le contenu de la description de la catégorie !</p>
-  <hr class="my-4">
-  <p class="hd1">Je pense qu'on pourrait mettre une image attachée à la catégorie en background.</p>
-  <p class="lead">
-    Ici un peu de texte si on veut en mettre, ou une liste des créateurs qui ont des objets dans cette catégorie? Avec du coup un bouton pour renvoyer vers le shop du créateur?
-  </p>
-</div>
+<br>
+  <h4 class="h1 text-center mt-3 mb-4 ml-3"> Parcourez les produits de la catégorie <%=category.name%></h4>
+  <h5 class="text-center mt-3 mb-4 ml-3">Petite description de la catégorie</h5>
+  <br><hr><br>
