--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,18 @@
 <div class="jumbotron1">
   <img src="https://images.unsplash.com/photo-1500829243541-74b677fecc30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" class="background-image" alt="...">
   <div class="background-image-overlay">
-  <h3>Contribuez à la consomation responsable durable locale</h3> 
+  <h3 class="jumbotron-title">Contribuez à la consomation responsable durable locale</h3> 
 </div>
 <div class="background-button-overlay">
-  <%= link_to "VOIR NOS ARTISANS", shops_path, :class=>"btn btn-success btn-lg" %> 
+  <a href="#map" class="btn btn-success btn-lg">VOIR NOS ARTISANS</a>
+
 </div>
 </div>
+
+<br><br><br><br><br><br><br><br><hr><br>
+
+<%= render 'main_div'%>
+
+
+
 
