--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -81,7 +81,7 @@ body {
 /*-----JUMBOTRON-----*/
 
 .jumbotron1 {
-  height: 88vh;
+  height: 600px;
   display: flex;
   flex-direction: column;             
   justify-content: center;
@@ -105,14 +105,14 @@ body {
   position: absolute;
   display: flex;
   flex-direction: column; 
-  padding-top: 200px;
+  padding-top: 240px;
 }
 
 .background-button-overlay{
   position: absolute;
   display: flex;
   flex-direction: column; 
-  padding-top: 320px;
+  padding-top: 350px;
 }
 
 .jumbotron-category {
@@ -167,7 +167,7 @@ footer {
 .card {
   width: 320px;
   height: 480px;
-  background: #000;
+  background: #ffffffad;
 }
 .card .image {
   width: 100%;
@@ -211,7 +211,7 @@ footer {
   left: 0;
   width: 70%;/*100%*/
   height: 100%;
-  background: #ffc107;
+  background: white;
   transition: .5s;
   transform-origin: left;
   transform: perspective(2000px) rotateY(-90deg);
@@ -222,7 +222,7 @@ footer {
 .card .details .center {
   padding: 20px;
   text-align: center;
-  background: #fff;
+  background: rgb(0, 0, 0);
   position: absolute;
   top: 50%;
  
@@ -249,10 +249,10 @@ footer {
 .card-maker {
   width: 320px;
   height: 520px;
-  background-color: rgba(187, 187, 187, 0.233);
+  background-color: #b8b8b81c;
   border-radius: 5px;
   margin: 50px 30px 50px 30px;
-  box-shadow: 0 5px 10px -14px rgba(0,0,0,0.25);
+  box-shadow: 0 5px 10px -14px rgba(0, 0, 0, 0.185);
   flex-direction: column;
 }
 
@@ -271,6 +271,75 @@ footer {
 }
 
 hr {
-  width: 1200px;
+  width: 80%;
+}
+
+/*-----HOMEPAGE-----*/
+
+.jumbotron-title{
+  font-size: 40px;
+}
+
+.main-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.title-index{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1e185f;
+}
+
+.card-vision   {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+}
+
+.card-map{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 620px;
+  height: 420px;
+  background-color: #1e185f27;
+  border-radius: 20px;
+  margin: 50px 30px 50px 30px;
+  box-shadow: 0 5px 10px -14px rgba(0, 0, 0, 0.438);
+}
+
+.card-who{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
  
 }
+
+.card-index {
+  width: 320px;
+  height: 420px;
+  background-color: #b8ff9a;
+  border-radius: 60px;
+  margin: 50px 30px 50px 30px;
+  box-shadow: 0 5px 10px -14px rgba(0, 0, 0, 0.185);
+  flex-direction: column;
+}
+
+.card-index:hover{
+  max-width: none;
+  box-shadow: 0px 0px 15px #0000007a;
+  transition: all 100ms ease-in;
+  transform: scale(1.05);
+}
+
+.arrow{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #1e185f;
+  resize: none;
+}
+
