--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -11,10 +11,10 @@ body {
 }
 /*------- NAVBAR ------*/
 
-.navbar {
+.navbar-project {
   /* background-color:#EFEFEF; */
   background: url('wood.jpg') repeat top left;
- 
+
   z-index: 9999;
 }
 
@@ -38,21 +38,21 @@ body {
 }
 
 /* .shadow {
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;  
-  -moz-box-shadow:    3px 3px 5px 6px #ccc; 
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;
   box-shadow:         3px 3px 5px 6px #ccc;
 } */
 
 .letter-spacing {
   letter-spacing: 0.35em;
-  
+
 }
 .category-cell {
   transition-property: background-color; /* Active la transition sur background-color */
   transition-duration: 1s; /* La transition dure 1s */
   font-weight: 900;
   color: #14ca61 !important;
-  
+
 }
 .category-cell a {
   color: #14ca61 !important;
@@ -61,7 +61,7 @@ body {
 }
 .category-cell a:hover {
   color: #1e185f !important;
-  
+
 }
 .category-cell:hover {
   background-color: #14ca61;
@@ -74,7 +74,7 @@ body {
 .navbar-toggler {
   border: none;
 }
-/* 
+/*
 #cart-navbar-icon:hover {
   color:  #14ca61;
 } */
@@ -104,7 +104,7 @@ body {
 .jumbotron1 {
   height: 88vh;
   display: flex;
-  flex-direction: column;             
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #EFEFEF;
@@ -127,21 +127,21 @@ body {
   align-self: flex;
   padding-top: 200px;
   display: flex;
-  flex-direction: column;             
- 
- 
+  flex-direction: column;
+
+
 }
 
 .jumbotron-category {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
   border-radius: 0.3rem;
-  background: #242134; 
+  background: #242134;
   background: -webkit-linear-gradient(to right, #9E9AB4, #242134);
   background: linear-gradient(to right, #9E9AB4, #242134);
-  
+
 }
- 
+
 .hd1{
     color:#fff;
 }
@@ -225,7 +225,7 @@ footer {
   transform: translateX(70%);/*100%*/
 }
 .card .details {
- 
+
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -306,17 +306,17 @@ footer {
 
 hr {
   width: 1200px;
- 
+
 }
 
 body::-webkit-scrollbar {
   width: 1em;
 }
- 
+
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
- 
+
 body::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
@@ -324,4 +324,3 @@ body::-webkit-scrollbar-thumb {
 .scrollable-element {
   scrollbar-color: red;
 }
-
