--- a/app/views/user_mailer/become_maker_email_admin.text.erb
+++ b/app/views/user_mailer/become_maker_email_admin.text.erb
@@ -4,7 +4,7 @@ Une nouvelle personne souhaite devenir Artisan !
 Voilà ces infos :
 * Prénom :    <%= @infos_user[:first_name] %>
 * Nom :       <%= @infos_user[:last_name] %>
-* Adresse :   <%= @infos_user[:address_line_1] + ", " + @infos_user[:zip_code] + " " + @infos_user[:city] %>
+* Adresse :   <%= @infos_user[:address_line_1] + " " + @infos_user[:zip_code] + " " + @infos_user[:city] %>
 * Site web :  <%= @infos_user[:website] %>
 
 Description :
