--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,58 +2,76 @@
   <img src="https://images.unsplash.com/photo-1500829243541-74b677fecc30?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1355&q=80" class="background-image" alt="...">
   <div class="background-image-overlay">
     <h3>Contribuez à la consomation responsable durable locale</h3>
-      <a class="btn btn-success btn-lg" href="#" role="button">Voir plus</a>
+      <a class="btn btn-success btn-lg" role="button" id="getData">Voir plus</a>
+      
   </div>
 </div>
 
 <div id="mapid" style="position: relative; outline: none;" class="leaflet-container leaflet-retina leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex="0">
-  <div class="leaflet-pane leaflet-map-pane" style="transform: translate3d(64px, 0px, 0px);">
-    <div class="leaflet-pane leaflet-tile-pane">
-      <div class="leaflet-layer " style="z-index: 1; opacity: 1;">
-        <div class="leaflet-tile-container leaflet-zoom-animated" style="z-index: 18; transform: translate3d(0px, 0px, 0px) scale(1);">
-          <img alt="" role="presentation" src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/12/2046/1361?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw" class="leaflet-tile leaflet-tile-loaded" style="width: 512px; height: 512px; transform: translate3d(-200px, -347px, 0px); opacity: 1;">
-          <img alt="" role="presentation" src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/12/2047/1361?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw" class="leaflet-tile leaflet-tile-loaded" style="width: 512px; height: 512px; transform: translate3d(312px, -347px, 0px); opacity: 1;">
-          <img alt="" role="presentation" src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/12/2046/1362?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw" class="leaflet-tile leaflet-tile-loaded" style="width: 512px; height: 512px; transform: translate3d(-200px, 165px, 0px); opacity: 1;">
-          <img alt="" role="presentation" src="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/12/2047/1362?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw" class="leaflet-tile leaflet-tile-loaded" style="width: 512px; height: 512px; transform: translate3d(312px, 165px, 0px); opacity: 1;">
-        </div>
-      </div>
-    </div>
-    <div class="leaflet-pane leaflet-shadow-pane">
-    </div>
-    <div class="leaflet-pane leaflet-overlay-pane">
-    </div>
-    <div class="leaflet-pane leaflet-marker-pane">
-    </div>
-    <div class="leaflet-pane leaflet-tooltip-pane">
-    </div>
-    <div class="leaflet-pane leaflet-popup-pane">
-    </div>
-    <div class="leaflet-proxy leaflet-zoom-animated" style="transform: translate3d(1.04799e+06px, 697379px, 0px) scale(4096);">
-    </div>
-  </div>
-  <div class="leaflet-control-container">
-    <div class="leaflet-top leaflet-left">
-      <div class="leaflet-control-zoom leaflet-bar leaflet-control">
-        <a class="leaflet-control-zoom-in" href="#" title="Zoom in" role="button" aria-label="Zoom in">+</a>
-        <a class="leaflet-control-zoom-out" href="#" title="Zoom out" role="button" aria-label="Zoom out">−</a>
-      </div>
-    </div>
-    <div class="leaflet-top leaflet-right">
-    </div>
-    <div class="leaflet-bottom leaflet-left">
-    </div>
-    <div class="leaflet-bottom leaflet-right">
-      <div class="leaflet-control-attribution leaflet-control">
-        <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a>
-          | Map data ©
-        <a href="https://www.openstreetmap.org/">OpenStreetMap</a>
-          contributors,
-        <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>
-          , Imagery ©
-        <a href="https://www.mapbox.com/">Mapbox</a>
-      </div>
-    </div>
-  </div>
+  <script>
+     window.onload = function () {
+    var mymap = L.map('mapid').setView([45.7435927, 4.8232209], 12)
+    const associatonMarker = L.marker([45.7435927, 4.8232209]).addTo(mymap).bindPopup("L'atelier des nouveaux designs").openPopup().bindTooltip("Boutique d’art et d’artisanat à Lyon, gérante de ce merveilleux site ;)")
+
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
+    maxZoom: 18,
+    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+      '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+      'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+    id: 'mapbox/streets-v11',
+    tileSize: 512,
+    zoomOffset: -1,
+    accessToken: "<%= ENV['MAP_TOKEN'] %>",
+  }).addTo(mymap);
+
+
+   $(document).ready(function(){
+     const bindUserPosition = (position) => {
+       const marker = L.marker([position.coords.latitude, position.coords.longitude]).addTo(mymap).bindPopup("Ma position").openPopup()
+       mymap.flyTo([position.coords.latitude, position.coords.longitude], 14)
+     }
+     let defaultPosition = { latitude: 45.7435927, longitude: 4.8232209 } // Default position is the associaton position
+     $('#getData').click(function(){
+       if(navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(bindUserPosition);
+        } else {
+          bindUserPosition(defaultPosition.latitude, defaultPosition.longitude)
+        }
+     })
+
+        $.ajax({
+    url: "/geolocs",
+    type:"GET",
+    dataType: "json",
+    success: function(result) {
+      
+      console.log(result)
+      const parsedResult = result
+      parsedResult.forEach(element => {
+        const marker = L.marker([element.latitude, element.longitude]).addTo(mymap).bindPopup('<a href="/shops/' + element.shop_id + '">Lien vers le shop</a>').bindTooltip("quick description")
+
+            
+      })
+    },
+    error: function(error) {
+      console.log(`Error ${error}`)
+    }
+  })
+    })
+
+}
+  </script>
 </div>
 
-<%= javascript_include_tag 'maps' %>
+
+
+var popup = L.popup();
+
+function onMapClick(e) {
+popup
+    .setLatLng(e.latlng)
+    .setContent(e.latlng.toString() + '<a href="http://www.google.com">Visit Google</a>"')
+    .openOn(map);
+}
+
+map.on('click', onMapClick);
