charlie's work : show a map and show pins on it from maker addresses

--- a/app/assets/javascripts/maps.js.erb
+++ b/app/assets/javascripts/maps.js.erb
@@ -11,4 +11,9 @@ window.onload = function () {
     zoomOffset: -1,
     accessToken: "<%= ENV['MAP_TOKEN'] %>",
   }).addTo(mymap);
+
+  var marker = L.marker([<%= User.all.last.customer.address.latitude %>, <%= User.all.last.customer.address.longitude %>]).addTo(mymap);
+
+
+
 }
