--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -103,6 +103,18 @@ body {
   height: 80vh;
 }
 
+.geocoder-dropdown-item {
+  padding: 5px;
+}
+.geocoder-dropdown-icon {
+  margin-right: 10px;
+}
+.geocoder-dropdown-text {
+  color: #5a3fc0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+}
+
 /*-----JUMBOTRON-----*/
 
 .jumbotron1 {
