--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,6 +8,7 @@
 </div>
 
 <div id="mapid" style="position: relative; outline: none;" class="leaflet-container leaflet-retina leaflet-fade-anim leaflet-grab leaflet-touch-drag" tabindex="0">
+</div>
   <script>
      window.onload = function () {
     var mymap = L.map('mapid').setView([45.7435927, 4.8232209], 12)
@@ -48,7 +49,7 @@
       console.log(result)
       const parsedResult = result
       parsedResult.forEach(element => {
-        const marker = L.marker([element.latitude, element.longitude]).addTo(mymap).bindPopup('<a href="/shops/' + element.shop_id + '">Lien vers le shop</a>').bindTooltip("quick description")
+        const marker = L.marker([element.latitude, element.longitude]).addTo(mymap).bindPopup(element.shop_name + ' ' + '<a href="/shops/' + element.shop_id + '">Lien vers le shop</a>').bindTooltip("quick description")
 
             
       })
@@ -61,17 +62,4 @@
 
 }
   </script>
-</div>
 
-
-
-var popup = L.popup();
-
-function onMapClick(e) {
-popup
-    .setLatLng(e.latlng)
-    .setContent(e.latlng.toString() + '<a href="http://www.google.com">Visit Google</a>"')
-    .openOn(map);
-}
-
-map.on('click', onMapClick);
