--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,8 +16,8 @@
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
         <% end %>
         <div class="field">
-          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+          <%= f.label :password %> <i>(laissez vide si vous ne souhaitez pas le modifier)</i><br />
+          <%= f.password_field :password, autocomplete: "mot de passe", class: "form-control" %>
           <% if @minimum_password_length %>
             <br/>
             <em><%= @minimum_password_length %> characters minimum</em>
@@ -25,10 +25,10 @@
         </div>
         <div class="field">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "mot de passe", class: "form-control" %>
         </div>
         <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+          <%= f.label :current_password %> <i>(Nous avons besoin de votre mot de passe actuel pour valider les changements)</i><br />
           <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
         </div>
         <div class="actions mt-5">
