--- a/app/views/items/_item_show.html.erb
+++ b/app/views/items/_item_show.html.erb
@@ -58,8 +58,9 @@
       <%= link_to "Se connecter pour ajouter au panier", new_user_registration_path, :class => "btn btn-primary btn-lg btn-block" %>
       <% end %>
       <br>
-      <div class="d-flex flex-row align-items-stretch">
+      <div class="d-flex flex-row align-items-center">
         <%= link_to "Revenir à la catégorie", category_path(item.category.id), :class => "btn btn-info"%>
+        <br>
         <%= link_to "Voir la page du shop", shop_path(item.shop.id), :class => "btn btn-info"%>
       </div>
     </div>
