--- a/app/views/static_pages/_main_div.html.erb
+++ b/app/views/static_pages/_main_div.html.erb
@@ -1,41 +1,51 @@
 <div class="main-div">
-  <h1 class="title-index">Notre vision</h1><br  >
+  <h1 class="title-index">Notre vision</h1>
     <div class="card-vision">
       <div class="card-index">
         <div class="card-body d-flex align-items-center flex-column">
-        <i class="fas fa-leaf fa-3x"></i>
-        <h3 class="text-center">Une démarche éco-responsable</h3>
-        <p>description</p>
+        <i class="fas fa-boxes fa-3x icon-color"></i>
+        <h4 class="title-vision-card">Matière premières</h4>
+        <p class="title-vision-card">Déchets voués à etre jeté</p>
+      </div>
+    </div>
+  </div >
+  <div class="card-vision-center">
+      <div class="card-index-creation">
+        <div class="card-body d-flex align-items-center flex-column">
+        <i class="fas fa-lightbulb fa-3x icon-color"></i>
+        <h4 class="title-vision-card-création">Création !</h4>
+        <p class="title-vision-card">Fabrication artisanal</p>
         </div>
       </div>
-      <div class="arrow">
-        <i class="fas fa-arrow-right fa-3x"></i>
+      <div>
+        <div class="card-body d-flex flex-column align-items-center ">
+          <%= image_tag "logo.png", class: "logo-card" %>
+        </div>
       </div>
       <div class="card-index">
         <div class="card-body d-flex align-items-center flex-column">
-        <i class="fas fa-leaf fa-3x"></i>
-        <h3 class="text-center">Des artisans engagés</h3>
-        <p>description</p>
+        <i class="fas fa-recycle fa-3x icon-color"></i>
+        <h4 class="title-vision-card">Recyclage</h4>
+        <p class="title-vision-card">limiter l'impact carbone</p>
         </div>
       </div>
-       <div class="arrow">
-        <i class="fas fa-arrow-right fa-3x"></i>
+  </div >
+  <div class="card-vision-bottom">
+      <div class="card-index">
+        <div class="card-body d-flex align-items-center flex-column">
+        <i class="fas fa-flag fa-3x icon-color"></i>
+        <h4 class="title-vision-card">Fabrication locale</h4>
+        <p class="title-vision-card">Made in France</p>
+        </div>
       </div>
       <div class="card-index">
         <div class="card-body d-flex align-items-center flex-column">
-        <i class="fas fa-leaf fa-3x"></i>
-        <h3 class="text-center">Des produits locaux</h3>
-        <p>description</p>
+        <i class="fas fa-trash fa-3x icon-color"></i>
+        <h4 class="title-vision-card">Zéro déchet</h4>
+        <p class="title-vision-card">limiter l'impact carbone</p>
         </div>
       </div>
-    </div >
-  <h1 class="title-index" id="map">API map</h1>
-    <div class="card-map">
-        <div class="card-body d-flex align-items-center flex-column">
-          <h3 class="text-center">Voici la map des artisans près de chez vous !</h3>
-        </div>
-    </div>
-  <h1 class="title-index">Qui sommes nous ?</h1>
-    <div class="card-who">
-    </div>
+     
+  </div >
+  
 </div>
