--- a/lib/assets/stylesheets/style.css
+++ b/lib/assets/stylesheets/style.css
@@ -285,6 +285,8 @@ hr {
   flex-direction: column;
 }
 
+/*-----VISION-----*/
+
 .title-index{
   display: flex;
   align-items: center;
@@ -299,47 +301,57 @@ hr {
   flex-wrap: nowrap;
 }
 
-.card-map{
+.card-vision-center{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 620px;
-  height: 420px;
-  background-color: #1e185f27;
-  border-radius: 20px;
-  margin: 50px 30px 50px 30px;
-  box-shadow: 0 5px 10px -14px rgba(0, 0, 0, 0.438);
 }
 
-.card-who{
+.card-vision-bottom{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: space-between;
+}
+
+.logo-card {
   display: flex;
   flex-direction: column;
-  justify-content: center;
- 
+  align-items: center;
+  height: 200px;
+  width: 200px;
 }
 
 .card-index {
-  width: 320px;
-  height: 420px;
-  background-color: #b8ff9a;
-  border-radius: 60px;
-  margin: 50px 30px 50px 30px;
+  width: 220px;
+  height: 220px;
+  background-color: white;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 120px;
+  margin: 20px 30px 0px 30px;
   box-shadow: 0 5px 10px -14px rgba(0, 0, 0, 0.185);
   flex-direction: column;
 }
 
-.card-index:hover{
-  max-width: none;
-  box-shadow: 0px 0px 15px #0000007a;
-  transition: all 100ms ease-in;
-  transform: scale(1.05);
-}
-
-.arrow{
-  display: flex;
+.card-index-creation {
+  width: 220px;
+  height: 220px;
+  background-color: white;
+  border-style: dotted;
+  border-width: 3px;
+  border-radius: 120px;
+  margin: 20px 30px 0px 30px;
+  box-shadow: 0 5px 10px -14px rgba(0, 0, 0, 0.185);
   flex-direction: column;
-  justify-content: center;
-  color: #1e185f;
-  resize: none;
 }
 
+.title-vision-card {
+  display: flex;
+  text-align: center;
+  color: #1e185f;
+}
+
+.icon-color{
+  color: #1e185f;
+}
