--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'jumbotron_show'%>
+<%= render 'jumbotron_show', shop: @shop %>
 
 <div class="container">
   <div class="row justify-content-center mb-4 mt-3">
