fixed syntax mistakes on home page

--- a/app/views/static_pages/_main_div.html.erb
+++ b/app/views/static_pages/_main_div.html.erb
@@ -4,8 +4,8 @@
       <div class="card-index">
         <div class="card-body d-flex align-items-center flex-column">
         <i class="fas fa-boxes fa-3x icon-color"></i>
-        <h4 class="title-vision-card">Matière premières</h4>
-        <p class="title-vision-card">Déchets voués à etre jeté</p>
+        <h4 class="title-vision-card">Matières premières</h4>
+        <p class="title-vision-card">Déchets voués à être jetés</p>
       </div>
     </div>
   </div >
@@ -14,7 +14,7 @@
         <div class="card-body d-flex align-items-center flex-column">
         <i class="fas fa-lightbulb fa-3x icon-color"></i>
         <h4 class="title-vision-card-création">Création !</h4>
-        <p class="title-vision-card">Fabrication artisanal</p>
+        <p class="title-vision-card">Fabrication artisanale</p>
         </div>
       </div>
       <div>
@@ -26,7 +26,7 @@
         <div class="card-body d-flex align-items-center flex-column">
         <i class="fas fa-recycle fa-3x icon-color"></i>
         <h4 class="title-vision-card">Recyclage</h4>
-        <p class="title-vision-card">limiter l'impact carbone</p>
+        <p class="title-vision-card">Limiter l'impact carbone</p>
         </div>
       </div>
   </div >
@@ -35,14 +35,14 @@
         <div class="card-body d-flex align-items-center flex-column">
         <i class="fas fa-flag fa-3x icon-color"></i>
         <h4 class="title-vision-card">Fabrication locale</h4>
-        <p class="title-vision-card">Made in France</p>
+        <p class="title-vision-card">100% Made in France</p>
         </div>
       </div>
       <div class="card-index">
         <div class="card-body d-flex align-items-center flex-column">
         <i class="fas fa-trash fa-3x icon-color"></i>
         <h4 class="title-vision-card">Zéro déchet</h4>
-        <p class="title-vision-card">limiter l'impact carbone</p>
+        <p class="title-vision-card">Réutiliser plutôt que jeter</p>
         </div>
       </div>
      
