--- a/app/views/static_pages/_main_div.html.erb
+++ b/app/views/static_pages/_main_div.html.erb
@@ -5,7 +5,7 @@
         <div class="card-body d-flex align-items-center flex-column">
         <i class="fas fa-boxes fa-3x icon-color"></i>
         <h4 class="title-vision-card">Matières premières</h4>
-        <p class="title-vision-card">Déchets voués à être jetés</p>
+        <p class="title-vision-card">Revalorisation des déchets</p>
       </div>
     </div>
   </div >
